--- a/src/sass/components/_list-task.scss
+++ b/src/sass/components/_list-task.scss
@@ -21,7 +21,11 @@
     font-size: $default-font-size;
     // margin-bottom: 1.6rem;
     cursor: pointer;
+  
     padding:1.2rem 2.4rem;
+    @include respond(phone){
+     padding:1.2rem;   
+    }
     width: 100%;
     &:hover{
         background-color: darken($color-grey, $amount: 2);
