--- a/src/sass/components/_tasks.scss
+++ b/src/sass/components/_tasks.scss
@@ -1,6 +1,8 @@
 .tasks{
     padding:3.2rem  2.4rem;
-
+    @include respond(phone){
+        padding:2.4rem 1.6rem;
+    }
     &__completed-container{
         margin-top: 2.4rem;
     }
@@ -47,7 +49,10 @@
         @include centerVerFlex;
         gap:2.4rem;
         font-size: $default-font-size;
-      
+      @include respond(phone){
+        padding:1.6rem 1.6rem 1rem 0;
+
+      }
     }
     // checked
     &__item.checked &__name{
