--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -161,6 +161,12 @@ body {
   width: 100%;
 }
 
+@media (max-width: 37.5em) {
+  .list-task {
+    padding: 1.2rem;
+  }
+}
+
 .list-task:hover {
   background-color: #ebeef1;
 }
@@ -175,6 +181,12 @@ body {
 
 .tasks {
   padding: 3.2rem  2.4rem;
+}
+
+@media (max-width: 37.5em) {
+  .tasks {
+    padding: 2.4rem 1.6rem;
+  }
 }
 
 .tasks__completed-container {
@@ -244,6 +256,12 @@ body {
   font-size: 1.6rem;
 }
 
+@media (max-width: 37.5em) {
+  .tasks__item {
+    padding: 1.6rem 1.6rem 1rem 0;
+  }
+}
+
 .tasks__item.checked .tasks__name {
   text-decoration: line-through;
 }
@@ -264,6 +282,12 @@ body {
   gap: 1.6rem;
   color: #868e96;
   padding: 1.2rem 2.4rem;
+}
+
+@media (max-width: 37.5em) {
+  .form {
+    padding: 1rem;
+  }
 }
 
 .form--list {
