--- a/src/sass/components/_icon.scss
+++ b/src/sass/components/_icon.scss
@@ -6,6 +6,10 @@
     &--circle{
         border-color: $color-primary;
     }
+    // &--circle.icon--task{
+    //    border-color:$color-grey-light;
+    //    transform: scale(1.4);
+    // }
     &--circle-check{
         color:$color-primary;
     }
